# mini-rust-os

./: .gitignore  Cargo.toml  Makefile  README.md
src/: allocator.rs  handle_command.rs  lib.rs  port.rs  spin.rs
src/arch/x86_64/: grub.cfg  linker.ld  long_mode_init.nasm
src/commands/: calc.rs  cpu.rs  disk.rs  echo.rs  help.rs  mem.rs  mod.rs  name.rs  pic.rs  port.rs  screen.rs  system.rs
src/drivers/: mod.rs
src/drivers/ata/: mod.rs
src/drivers/pic/: mod.rs
src/vga_buffer/: mod.rs  modes.rs
