[package]
name = "mini_rust_os"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"
spin = { version = "0.9.8", features = ["spin_mutex"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = { version = "0.14.12", default-features = false, features = ["instructions", "inline_asm"] }

[features]
test = []

[profile.dev]
opt-level = "z"
panic = "abort"
lto = true

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
